--- a/styles/scss/abstracts/_mixins.scss
+++ b/styles/scss/abstracts/_mixins.scss
@@ -3,20 +3,20 @@
 }
 
 @mixin center {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 @mixin center-vertical {
-    position: relative;
+    position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
 
 @mixin center-horizontal {
-    position: relative;
+    position: absolute;
     left: 50%;
     transform: translateX(-50%);
 }
