--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -12,7 +12,7 @@ p {
 
 h1, h2, h3, h4, h5 {
     font-family: $primary-font;
-    margin: 2.75rem 0 1rem;
+    margin: 0 0 1rem;
     font-weight: 200;
     line-height: 1.15;
 }
