--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+.footer {
   background-color: $secondary-color;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
@@ -7,28 +7,7 @@ footer {
   font: normal 16px sans-serif;
   padding: 45px 50px;
   
-  
-  .footer__left p{
-  	color:  #8f9296;
-  	font-size: 14px;
-  	margin: 0;
-  }
-  /* Footer links */
-  p.footer__links{
-  	font-size:18px;
-  	font-weight: bold;
-  	color:  #ffffff;
-  	margin: 0 0 10px;
-		padding: 0;
-	}
-
-	a{
-		display:inline-block;
-		line-height: 1.8;
-		text-decoration: none;
-		color:  inherit;
-	}
-  .footer__right{
+	.footer__contact{
   	float: right;
   	margin-top: 6px;
 		max-width: 180px;
@@ -48,6 +27,29 @@ footer {
 			margin-left: 3px;
 		}
   }
+	
+
+  .footer__links {
+  	color:  #8f9296;
+  	font-size: 14px;
+  	margin: 0;
+  }
+  /* Footer links */
+  p.footer__links{
+  	font-size:18px;
+  	font-weight: bold;
+  	color:  #ffffff;
+  	margin: 0 0 10px;
+		padding: 0;
+	
+		a{
+			display:inline-block;
+			line-height: 1.8;
+			text-decoration: none;
+			color:  inherit;
+		}
+	}
+  
 }    
 
 
